# Datenvisualisierung

./: .gitignore
build-VisualizationAndGPUComputing-Desktop-Debug/: Makefile  VisualizationAndGPUComputing  moc_mainwindow.cpp  moc_opengldisplaywidget.cpp  moc_predefs.h  slice_fshader.glsl  slice_vshader.glsl  stream_fshader.glsl
build-VisualizationAndGPUComputing-Desktop-Profile/: Makefile  VisualizationAndGPUComputing  VisualizationAndGPUComputing.debug  moc_mainwindow.cpp  moc_opengldisplaywidget.cpp
build-week01-Desktop-Debug/: Makefile  week01
exercise/: CMakeLists.txt  VisualizationAndGPUComputing.pro  datavolumeboundingboxrenderer.h  flowdatasource.cpp  flowdatasource.h  horizontalcontourlinesrenderer.h  horizontalslicerenderer.cpp  horizontalslicerenderer.h  horizontalslicetocontourlinemapper.cpp  horizontalslicetocontourlinemapper.h  horizontalslicetoimagemapper.cpp  horizontalslicetoimagemapper.h  mainwindow.h  opengldisplaywidget.cpp  opengldisplaywidget.h  streamlinesmapper.cpp  streamlinesmapper.h
week01/: antworten  flowdatasource.cpp  flowdatasource.h  main.cpp  week01.pro
week02/: CMakeLists.txt  VisualizationAndGPUComputing.pro  datavolumeboundingboxrenderer.cpp  flowdatasource.cpp  flowdatasource.h  horizontalcontourlinesrenderer.cpp  horizontalslicerenderer.cpp  horizontalslicerenderer.h  horizontalslicetoimagemapper.cpp  horizontalslicetoimagemapper.h  main.cpp  mainwindow.cpp  opengldisplaywidget.cpp  opengldisplaywidget.h  slice_fshader.glsl  slice_vshader.glsl  streamlinesrenderer.cpp  streamlinesrenderer.h
